// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`themes/tokens/color/utilities/convert > hexToOklch > black 1`] = `
{
  "c": 0,
  "l": 0,
  "mode": "oklch",
}
`;

exports[`themes/tokens/color/utilities/convert > hexToOklch > red 1`] = `
{
  "c": 0.2576833038053608,
  "h": 29.233880279627854,
  "l": 0.6279553639214311,
  "mode": "oklch",
}
`;

exports[`themes/tokens/color/utilities/convert > hexToOklch > white 1`] = `
{
  "c": 0,
  "l": 1.0000000000000002,
  "mode": "oklch",
}
`;

exports[`themes/tokens/color/utilities/convert > oklchToRgb > black 1`] = `
{
  "b": 0,
  "g": 0,
  "mode": "rgb",
  "r": 0,
}
`;

exports[`themes/tokens/color/utilities/convert > oklchToRgb > red 1`] = `
{
  "b": -0,
  "g": 0,
  "mode": "rgb",
  "r": 1,
}
`;

exports[`themes/tokens/color/utilities/convert > oklchToRgb > white 1`] = `
{
  "b": 1,
  "g": 1,
  "mode": "rgb",
  "r": 1,
}
`;

exports[`themes/tokens/color/utilities/convert > tokenToOklchToken > hex 1`] = `
{
  "oklch": {
    "c": 0,
    "l": 1.0000000000000002,
    "mode": "oklch",
  },
  "oklchDark": undefined,
}
`;

exports[`themes/tokens/color/utilities/convert > tokenToOklchToken > hex and hexDark 1`] = `
{
  "oklch": {
    "c": 0,
    "l": 1.0000000000000002,
    "mode": "oklch",
  },
  "oklchDark": {
    "c": 0,
    "l": 0,
    "mode": "oklch",
  },
}
`;

exports[`themes/tokens/color/utilities/convert > tokenToOklchToken > oklch 1`] = `
{
  "oklch": {
    "c": 0,
    "l": 1.0000000000000002,
    "mode": "oklch",
  },
  "oklchDark": undefined,
}
`;

exports[`themes/tokens/color/utilities/convert > tokenToOklchToken > oklch and oklchDark 1`] = `
{
  "oklch": {
    "c": 0,
    "l": 1.0000000000000002,
    "mode": "oklch",
  },
  "oklchDark": {
    "c": 0,
    "l": 0,
    "mode": "oklch",
  },
}
`;
